--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div id="container">
-  <app-sidebar>
-    <div id="content"><router-outlet></router-outlet></div>
-  </app-sidebar>
+  <app-sidebar> </app-sidebar>
+  <div id="content"><router-outlet></router-outlet></div>
 </div>
