--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       </a>
     </li>
     <li>
-      <a routerLink=""> <i class="material-icons">message</i> </a>
+      <a routerLink="posts"> <i class="material-icons">message</i> </a>
     </li>
   </ul>
 </nav>
